# poly_variants

./: Cargo.toml  LICENSE  README.md
src/: declarations.rs  flat_declarations.rs  lib.rs
src/macros/: apply_generics.rs  macro_rules_stack.rs  make_macro_kit_up.rs  mod.rs  paste_let.rs
src/syntax/: generic.rs  test.rs
src/tests/: expr.rs  mod.rs  riscv.rs  rwasm.rs  simple.rs
